Enable plugin test